AUGREL/src/objects/General_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Any general custom attribute that may extend the definition of a profile and/or user to provide distinct processing options - may be leveraged in workflow, formulas, and code; e.g. exempt data admin-level profiles or users from validation rules or workflows</description>
    <fields>
        <fullName>Data_Admin_Exemption__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SRC: Salesforce
INT: 
Trans: N
BU: RL
FD: Exempt this profile or user from some validation rules and workflows</description>
        <inlineHelpText>Exempt this profile or user from some validation rules and workflows</inlineHelpText>
        <label>Data Admin Exemption</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Repo_Default_Salvage_Auction__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: N
BU: RL
FD: Identifies the default auction agency selected for a title services request in the rights letters process when a repo has been dispositioned as salvaged</description>
        <inlineHelpText>Enter the unique ID of the default auction agency to process salvage repos - must match the Account.Account_Number__c field of an auction agency</inlineHelpText>
        <label>Repo Default Salvage Auction</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TempCaseId__c</fullName>
        <description>Temp field to contain the Case Id and Service Channel of a Customer Profile Edit made through the UC Publisher.  Fields are separated by semi-colon.  Field is set when the Case is created and cleared when the Activity(s) is created.  Can be used for other such purposes.</description>
        <label>Temp Case Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>General Settings</label>
</CustomObject>